--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -130,7 +130,7 @@
     <ClCompile Include="ComponentDirection.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="ComponentModel.cpp" />
-    <ClCompile Include="ComponentNormal.cpp" />
+    <ClCompile Include="ComponentNormalTexture.cpp" />
     <ClCompile Include="ComponentPhysics.cpp" />
     <ClCompile Include="ComponentPosition.cpp" />
     <ClCompile Include="ComponentShader.cpp" />
@@ -176,7 +176,7 @@
     <ClInclude Include="ComponentDirection.h" />
     <ClInclude Include="ComponentInput.h" />
     <ClInclude Include="ComponentModel.h" />
-    <ClInclude Include="ComponentNormal.h" />
+    <ClInclude Include="ComponentNormalTexture.h" />
     <ClInclude Include="ComponentPhysics.h" />
     <ClInclude Include="ComponentPosition.h" />
     <ClInclude Include="ComponentShader.h" />
@@ -263,6 +263,7 @@
   <ItemGroup>
     <Object Include="Collectable.obj">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </Object>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
