Finally sorted out the normal mapping turned out to be an issue where the TBN matrix was saved locally instead of passed over to the fragment shader

--- a/Game-Test1/Game-Test1.vcxproj
+++ b/Game-Test1/Game-Test1.vcxproj
@@ -127,6 +127,7 @@
     <Image Include="2k_earth_daymap.jpg" />
     <Image Include="container.jpg" />
     <Image Include="containerNormal.jpg" />
+    <Image Include="Earth_Normal.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Object Include="Collectable.obj">
