--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -33,6 +33,9 @@
     <Image Include="containerNormal.jpg">
       <Filter>Textures</Filter>
     </Image>
+    <Image Include="Earth_Normal.jpg">
+      <Filter>Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="cube.obj">
